--- a/ApprentissageparRenforcement/TP Apprentissage Par Renforcement.ipynb
+++ b/ApprentissageparRenforcement/TP Apprentissage Par Renforcement.ipynb
@@ -63,20 +63,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From C:\\Users\\F284047\\AppData\\Local\\Temp/ipykernel_9880/3253531082.py:2: The name tf.enable_eager_execution is deprecated. Please use tf.compat.v1.enable_eager_execution instead.\n",
+      "WARNING:tensorflow:From C:\\Users\\F284047\\AppData\\Local\\Temp/ipykernel_22780/3253531082.py:2: The name tf.enable_eager_execution is deprecated. Please use tf.compat.v1.enable_eager_execution instead.\n",
       "\n"
      ]
     }
    ],
    "source": [
     "import tensorflow as tf\n",
-    "tf.enable_eager_execution()\n",
     "from tensorflow.keras import layers\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "%matplotlib notebook\n",
-    "\n",
+    "%matplotlib qt\n",
     "from gym_gmmcar.envs.circle_env import CircleEnv"
    ]
   },
