Essai pour estimer les coefficients

--- a/OptimisationBayesienne/TP Optimisation Bayésienne.ipynb
+++ b/OptimisationBayesienne/TP Optimisation Bayésienne.ipynb
@@ -159,13 +159,13 @@
     "Voici ce que j'ai essayé de faire pour estimer les paramètres :\n",
     "\n",
     "Pour a1 et a2 :\n",
-    "![Estimation de a1 et a2](../Estimation_a1_a2.png)\n",
-    "\n",
-    "<img src=\"URL_de_l_image\" alt=\"Texte alternatif\" width=\"300\" height=\"200\">\n",
+    "<br>\n",
+    "<img src=\"../Estimation_a1_a2.png\" alt=\"Estimation de a1 et a2\" width=\"800\">\n",
     "\n",
     "\n",
     "Pour a4 et a5 :\n",
-    "![Estimation de a4 et a5](../Estimation_a4_a5.png)"
+    "<br>\n",
+    "<img src=\"../Estimation_a4_a5.png\" alt=\"Estimation de a4 et a5\" width=\"800\">"
    ]
   },
   {
